--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Firestorm Games Canada
 subtitle: Game Studio and Freelance
 email: steven.anthony.burrell@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Road
