--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Firestorm Games Canada
 subtitle: 
 email: steven.anthony.burrell@gmail.com
-description: Freelance Game Designer and Scriptwriter
+description: Freelance Game Design and Scriptwriting
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
